test/bad/check/NoEq.hs
module NoEq where

badEq :: a -> a -> Bool
badEq a b = a == b
